# videoloop-by-tempo

./: .gitignore  CMakeLists.txt  README.md  TODO  audiodatahandler.cpp  audiodatahandler.h  audiodevice.cpp  audiodevice.h  gui.cpp  gui.h  install.sh  looprenderer.cpp  looprenderer.h  main.cpp  openglwidget.cpp  openglwidget.h  packages-runtime.list  packages.list  rhythmextractor.cpp  rhythmextractor.h  settings.JSON  texture.frag  texture.vert  texture_frag.spv  texture_vert.spv  vulkanwindow.cpp  vulkanwindow.h
assets/frames/leekspin/: settings.JSON
assets/shaders/: ads_fragment.frag  ads_fragment.vert
release/: README.md  install.sh  settings.JSON  tracktempos.db  videoloop-by-tempo
release/frames/leekspin/: settings.JSON
src/: CMakeLists.txt  audiodevice.cpp  audiodevice.h  dbmanager.cpp  dbmanager.h  dbuswatcher.cpp  dbuswatcher.h  fileadder.cpp  fileadder.h  frameloader.cpp  frameloader.h  graphicswidget.cpp  graphicswidget.h  gui.cpp  gui.h  main.cpp  mainwindow.cpp  mainwindow.h  modelloader.cpp  modelloader.h  openglwidget.cpp  openglwidget.h  openglwidget2.cpp  openglwidget2.h  pulseaudiowatcher.cpp  pulseaudiowatcher.h  rhythmextractor.cpp  rhythmextractor.h  screensaverinhibitor.cpp  screensaverinhibitor.h  settings.cpp  settings.h  spotifywatcher.cpp  spotifywatcher.h  tempo.cpp  tempo.h  track.cpp  track.h  types.h
test/: CMakeLists.txt  tst_dbmanager.cpp  tst_settings.cpp  tst_tempo.cpp
test/data/: settings_invalid.txt  settings_invalid_datatype.JSON  settings_valid.JSON  trackdata.db
